tests/cases/compiler-development/artifact/errors/diagnostic-union-by-duplicate-arm.diagnostic
diagnostic error code=T0001 family=type message="duplicate union by arm 'text'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-union-by-duplicate-arm.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-union-by-duplicate-arm.ari" bytes=176
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-union-by-duplicate-arm.ari" line=9 column=5 end_line=9 end_column=9 byte_start=122 byte_end=126 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-union-by-duplicate-arm.ari:9:5\n   |\n 9 |     text => i64,\n   |     ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-union-by-duplicate-arm.ari" line=8 column=5 end_line=8 end_column=9 byte_start=105 byte_end=109 message="previous union by arm 'text'"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-union-by-duplicate-arm.ari:8:5\n   |\n 8 |     text => i64,\n   |     ^^^^"
  Note index=0 location=none message="previous union by arm 'text'"
  Help index=0 location=none message="each discriminant arm should map to exactly one active payload type"
